tests/baselines/reference/mixinAbstractClasses.2.errors.txt
tests/cases/conformance/classes/mixinAbstractClasses.2.ts(20,7): error TS2515: Non-abstract class 'DerivedFromAbstract' does not implement inherited abstract member 'abstractBaseMethod' from class 'AbstractBase & Mixin'.
tests/cases/conformance/classes/mixinAbstractClasses.2.ts(24,1): error TS2511: Cannot create an instance of an abstract class.


==== tests/cases/conformance/classes/mixinAbstractClasses.2.ts (2 errors) ====
    interface Mixin {
        mixinMethod(): void;
    }
    
    function Mixin<TBaseClass extends abstract new (...args: any) => any>(baseClass: TBaseClass): TBaseClass & (abstract new (...args: any) => Mixin) {
        abstract class MixinClass extends baseClass implements Mixin {
            mixinMethod() {
            }
        }
        return MixinClass;
    }
    
    abstract class AbstractBase {
        abstract abstractBaseMethod(): void;
    }
    
    const MixedBase = Mixin(AbstractBase);
    
    // error expected: Non-abstract class 'DerivedFromAbstract' does not implement inherited abstract member 'abstractBaseMethod' from class 'AbstractBase & Mixin'.
    class DerivedFromAbstract extends MixedBase {
          ~~~~~~~~~~~~~~~~~~~
!!! error TS2515: Non-abstract class 'DerivedFromAbstract' does not implement inherited abstract member 'abstractBaseMethod' from class 'AbstractBase & Mixin'.
    }
    
    // error expected: Cannot create an instance of an abstract class.
    new MixedBase();
    ~~~~~~~~~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.